kubernetes/location-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: location-service
  namespace: quick-haul
spec:
  replicas: 2
  selector:
    matchLabels:
      app: location-service
  template:
    metadata:
      labels:
        app: location-service
    spec:
      containers:
      - name: location-service
        image: sathvik2003/quickhaul-location:v2
        command: ["uvicorn", "services.location_service.app:app", "–-host", "0.0.0.0", "–-port", "8001"]
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        ports:
        - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: location-service
  namespace: quick-haul
spec:
  type: ClusterIP
  ports:
  - port: 8001
    targetPort: 8001
  selector:
    app: location-service
