kubernetes/location-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: location-service
  namespace: quick-haul
spec:
  type: ClusterIP
  ports:
  - port: 8001
    targetPort: 8001
  selector:
    app: location-service
